monticore-generator/src/test/resources/cocos/invalid/A4015/A4015.mc4
package cocos.invalid.A4015;

grammar A4015 {

  token A = "a"?;

}
